@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*jack-audio-connection-kit-0.121.3-r1 (31 Jul 2013)
+
+  31 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  +jack-audio-connection-kit-0.121.3-r1.ebuild:
+  Use python-single-r1 eclass to make sure jack_control has correct shebang.
+
   31 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
   jack-audio-connection-kit-0.121.3.ebuild:
   Minor cleanup.
